namespace CsvProcessor.Models
{
    public class CsvRecord
    {
        public int Id { get; set; }
        public string Name { get; set; }
        public int Age { get; set; }
        public string Email { get; set; }
    }
}
